Attempt to implement cron

--- a/scripts/docker/env/production/celery.env
+++ b/scripts/docker/env/production/celery.env
@@ -14,6 +14,7 @@ ALLOWED_HOSTS=['django',]
 DOCKER_ENV=production
 CELERY_CMD=celery worker --app=geosk.celeryapp:app --broker=amqp://guest:guest@rabbitmq:5672/ -B -l INFO
 IS_CELERY=true
+IS_SUPERVISOR=false
 C_FORCE_ROOT=1
 GEOSERVER_PUBLIC_LOCATION=http://geonode/geoserver/
 GEOSERVER_LOCATION=http://geonode/geoserver/
