--- a/scripts/docker/env/production/supervisor.env
+++ b/scripts/docker/env/production/supervisor.env
@@ -8,21 +8,14 @@ GEONODE_DATABASE=geonode
 GEONODE_DATABASE_PASSWORD=geonode
 GEONODE_GEODATABASE=geonode_data
 GEONODE_GEODATABASE_PASSWORD=geonode_data
-BROKER_URL=amqp://guest:guest@rabbitmq:5672/
 DJANGO_SETTINGS_MODULE=geosk.settings
 ALLOWED_HOSTS=['django',]
 DOCKER_ENV=production
-UWSGI_CMD=uwsgi --ini /usr/src/app/uwsgi.ini
-IS_CELERY=false
-IS_SUPERVISOR=false
+SUPERVISOR_CMD=/usr/bin/supervisord
+IS_CELERY=true
+IS_SUPERVISOR=true
 C_FORCE_ROOT=1
 GEOSERVER_PUBLIC_LOCATION=http://geonode/geoserver/
 GEOSERVER_LOCATION=http://geonode/geoserver/
-SOS_LOCATION=http://geonode/observations/sos
-SOS_TRANSACTIONAL_AUTHORIZATION_TOKEN=862f95da7f578881aebf6c2722fe4840
-TASTYPIE_APIKEY=pyxW5djJ7XsjeFUXduAsGpR4xMGUwpeBGQRqTeT3
 SITEURL=http://geonode/
-VERSION_UBUNTU=16.04
-VERSION_JAVA=1.8
-VERSION_TOMCAT=9
-VERSION_SOS=4.4
+TASTYPIE_APIKEY=pyxW5djJ7XsjeFUXduAsGpR4xMGUwpeBGQRqTeT3
