--- a/scripts/docker/env/production/supervisor.env
+++ b/scripts/docker/env/production/supervisor.env
@@ -11,8 +11,8 @@ GEONODE_GEODATABASE_PASSWORD=geonode_data
 DJANGO_SETTINGS_MODULE=geosk.settings
 ALLOWED_HOSTS=['django',]
 DOCKER_ENV=production
-SUPERVISOR_CMD=/usr/bin/supervisord
-IS_CELERY=true
+SUPERVISOR_CMD="* * * * * /usr/bin/python -W ignore /usr/src/app/manage.py collect_metrics -n -t xml >> /var/log/cron.log 2>&1"
+IS_CELERY=false
 IS_SUPERVISOR=true
 C_FORCE_ROOT=1
 GEOSERVER_PUBLIC_LOCATION=http://geonode/geoserver/
