--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -21,6 +21,15 @@ services:
     environment:
       - DEBUG=True
 
+  cron:
+    build: .
+    # Loading the app is defined here to allow for
+    # autoreload on changes it is mounted on top of the
+    # old copy that docker added when creating the image
+    volumes:
+      - '.:/usr/src/app'
+    environment:
+      - DEBUG=True
 
   consumers:
     build: .
